--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,33 +1,30 @@
 {
-  "env": {
-    "browser": true,
-    "commonjs": true,
-    "es6": true,
-    "node": true
-  },
-  "extends": "eslint:recommended",
-  "parserOptions": {
-    "sourceType": "module",
-    "ecmaVersion": 2017
-  },
-  "rules": {
-    "indent": [
-      "error",
-      4,
-      {
-        "SwitchCase": 1
-      }
-    ],
-    "quotes": [
-      "error",
-      "single",
-      {
-        "avoidEscape": true
-      }
-    ],
-    "semi": [
-      "error",
-      "always"
-    ]
-  }
+    "env": {
+        "es6": true,
+        "node": true
+    },
+    "extends": "eslint:recommended",
+    "parserOptions": {
+        "ecmaVersion": 2017,
+        "sourceType": "module"
+    },
+    "rules": {
+        "indent": [
+            "warn",
+            4
+        ],
+        "linebreak-style": [
+            "warn",
+            "unix"
+        ],
+        "no-unused-vars": [  "warn" ],
+        "no-undef": [ "warn" ],
+        "no-console": [ "warn" ],
+        "no-case-declarations": [ "warn" ],
+        "no-extra-semi": [ "warn" ],
+        "no-unreachable": [ "warn" ],
+        "no-redeclare": [ "warn" ],
+        "no-useless-escape": [ "warn" ],
+        "no-constant-condition": [ "warn" ]
+    }
 }
